streamline and reformat some more text around webxdc

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -58,14 +58,19 @@ makes more sense if you consider a chat web app
 running on top of an anonymizing mailing list:
 suddenly people could do e2e-encrypted private communications on top 🤯
 
-Our Poll example app is 6 kilobytes and, as with all chat-shared web apps,
-automatically operates offline-first and end-to-end encrypted
-without any server deployments (and thus without logins or GDPR/consent screens).
+Our Poll example app is 6 kilobytes and, as with all apps shared in a chat,
+automatically operates with these wonderful properties and UX:
+
+- offline-first and end-to-end encrypted,
+
+- without any server deployments,
+
+- without logins or GDPR/consent screens.
+
 UX and privacy researchers and befriended hackers from diverse projects such as Cryptpad, DAT, IPFS,
 Peermaps and Libreoffice agree:
 web tech combined with decentralized chat (aka "webxdc") is a rare jewel worth refining.
-Some friends and long-term followers hailed our approach as a "decentralized super-app".
-Can you guess from which island these developments were inspired and co-driven?
+Some friends and long-term followers hailed our approach as marking the beginning of a "decentralized super-app". Can you btw guess from which island these developments were inspired and co-driven?
 
 ### Movements in the woods and underground…
 
