strike a probelmatic sentence, shift images part 09090123

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -105,10 +105,9 @@ happens to be an impediment for many when getting started with Delta Chat.
 Supplying the e-mail address and password is enough for autoconfiguration to
 quickly succeed, but not without problems and, although plenty of e-mail providers work
 with Delta Chat, several have unnecessary limitations and complications.
-Many users do not have a good e-mail address and can't easily get one.
-We are experimenting with a single-click or QR-code based sign-up that
-quickly bootstraps a working account configured with Delta Chat.
-The latest addition to our group of sysadmins has seup a new server and
+We are experimenting with single-click or QR-code based sign-up that
+quickly bootstraps a working e-mail account and configures it with Delta Chat.
+A newly joining sysadmin has setup a new server in an hour and
 onboarded a couple of friends, now all happily using Delta Chat.
 
 ![Some Delta Chat testers sitting on the ground](../assets/blog/2022-12-ux-studies.jpg)
@@ -134,6 +133,7 @@ not new barriers and walled gardens.
 
 ### Our "Rust-core" architecture and its UI bindings…
 
+<img src="../assets/blog/2020-03-26-bots-2.jpg" width="270" style="float:right; margin-left:1em;" />
 Delta Chat was the first fully Rust-based chat app available
 on all platforms, and may still be the only one.
 Rust is a system-level memory-safe language,
@@ -156,7 +156,6 @@ directly talking to core without a C-layer.
 New asynchronous python bindings doing away with all CFFI were started this week
 with first bots being ported to it.
 
-<img src="../assets/blog/2020-03-26-bots-2.jpg" width="270" style="float:right; margin-left:1em;" />
 For mailing-lists, SuperGroups, Mastodon, screenshots, downloading, and other fun experiments,
 bots are being deployed for practical and entertaining contexts.
 But this post is getting long and twisted enough already…
@@ -190,7 +189,7 @@ in Freiburg (black forest), elsewhere in Germany (Berlin, Hamburg, Leipzig…),
 and from time to time in more remote locations like Kyiv or Havanna.
 We typically invite and converse with folks from interesting or befriended projects,
 collocated in decentralization, internet freedom, and queer fusion spaces.
-![Delta XYIV painted logo](../assets/blog/screenshots/xyiv.png)
+![Delta XYIV painted logo](../assets/blog/xyiv.png)
 
 Several of us avoid flying, and some are involved in Friday-for-Futures or adjacent activities.
 If we gather somewhere remote then usually for weeks rather than days,
