add missing resource, clarify/tweak two sentences

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -199,7 +199,7 @@ We aim to arrange ourselves [empathically](https://delta.chat/en/community-stand
 and keep dates and clocktime scheduling to a minimum.
 
 Currently, there are around a dozen weekly committers to our repositories,
-with a bit more than half of them receiving funding
+with a bit more than half of them receiving funding either
 through employment contracts (if in Germany) or freelancing (if international).
 Another dozen people and maintainers from other projects
 are involved in background discussions and hack sessions around "what's interesting to do next, maybe together".
@@ -210,7 +210,7 @@ Please contact us via e-mail addressed to delta@merlinux.eu
 if you are interested in helping us and our users with beautiful front end developments.
 
 Please provide some background on your prior projects.
-A CV is welcome, but not necessary.
+A CV is not neccessary but welcome if you have one lying around.
 If we determine a base fit, we typically arrange a one month paid test period for both sides.
 We'll organize an onboarding group for you and guide you through first issues and peoples involved.
 
