use a different image

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -189,7 +189,8 @@ in Freiburg (black forest), elsewhere in Germany (Berlin, Hamburg, Leipzig…),
 and from time to time in more remote locations like Kyiv or Havanna.
 We typically invite and converse with folks from interesting or befriended projects,
 collocated in decentralization, internet freedom, and queer fusion spaces.
-![Delta XYIV painted logo](../assets/blog/xyiv.png)
+
+![Beautiful Cat with Delta Chat sticker](../assets/blog/2021-11-13-delta-cat.jpg)
 
 Several of us avoid flying, and some are involved in Friday-for-Futures or adjacent activities.
 If we gather somewhere remote then usually for weeks rather than days,
