--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -133,7 +133,7 @@ not new barriers and walled gardens.
 
 ### Our "Rust-core" architecture and its UI bindings…
 
-<img src="../assets/blog/2020-03-26-bots-2.jpg" width="270" style="float:right; margin-left:1em;" />
+<img src="../assets/blog/rust-delta.png" width="270" style="float:right; margin-left:1em;" />
 Delta Chat was the first fully Rust-based chat app available
 on all platforms, and may still be the only one.
 Rust is a system-level memory-safe language,
@@ -155,6 +155,8 @@ our Desktop app introduces JSON-RPC (JSON Remote-Procedure-Calls),
 directly talking to core without a C-layer.
 New asynchronous python bindings doing away with all CFFI were started this week
 with first bots being ported to it.
+
+<img src="../assets/blog/2020-03-26-bots-2.jpg" width="270" style="float:right; margin-left:1em;" />
 
 For mailing-lists, SuperGroups, Mastodon, screenshots, downloading, and other fun experiments,
 bots are being deployed for practical and entertaining contexts.
