- use a different main image - some more refinments and images

--- a/_posts/2022-12-12-uidevs.md
+++ b/_posts/2022-12-12-uidevs.md
@@ -1,7 +1,7 @@
 ---
-title: Delta Chat backgrounds; want a UI/UX dev job by chance?
+title: Decentralization Unchained (Psst ... want a UI/UX dev job?)
 author: olgax
-image: ../assets/blog/2022-12-uidevs.jpg
+image: ../assets/blog/decentralization-unchained.jpg
 ---
 
 What do indigenous communities in the Amazon rainforest, friends in Cuba, families in Iran, activists from Russia, a monastery in Cambodia, and many folks in the Fediverse have in common?
@@ -22,6 +22,7 @@ You guessed it? They're using Delta Chat because it is:
 - **interoperable**: You can chat with anyone even if they don't have
   the app (e-mail!).
 
+![Decentralization Unchained](../assets/blog/decentralization-unchained.jpg)
 
 ### Why don't we spend more time on promotion?
 
@@ -33,15 +34,8 @@ trying to create hype by boasting about users and growth.
 Avoiding popularity is not merely born out of humility, but also realism as
 we can only address so much feedback and suggestions.
 If we are over capacity, feature requests and ideas turn into pressure and stress.
-
-Luckily, we have a wonderful testing community with key contributors
-sorting out issues with users and discussing with developers.
-One from Austria kept reminding us about specific connectivity problems
-even if they rarely occur and are hard to re-produce:
-the issues were fixed the last week, which increased resiliency for everyone.
-Did you know that most Delta Chat features are first tested on a Caribbean island?
-Some were originally developed in the DeltaLab app:
-a friendly fork of Delta Chat Android only available in the Cuban app store.
+This post is not a pre-announcement but a bit of a wild ride
+through what's currently happening and what we are seeking out.
 
 ### Sharing web apps in a chat (webxdc)
 
@@ -56,7 +50,7 @@ One of our more experienced and playful developers recently whipped up a chat ap
 that runs inside a chat group —
 makes more sense if you consider a chat web app
 running on top of an anonymizing mailing list:
-suddenly people could do e2e-encrypted private communications on top 🤯
+suddenly people could do ephemerally e2e-encrypted private communications on top 🤯
 
 Our Poll example app is 6 kilobytes and, as with all apps shared in a chat,
 automatically operates with these wonderful properties and UX:
@@ -70,7 +64,7 @@ automatically operates with these wonderful properties and UX:
 UX and privacy researchers and befriended hackers from diverse projects such as Cryptpad, DAT, IPFS,
 Peermaps and Libreoffice agree:
 web tech combined with decentralized chat (aka "webxdc") is a rare jewel worth refining.
-Some friends and long-term followers hailed our approach as marking the beginning of a "decentralized super-app". Can you btw guess from which island these developments were inspired and co-driven?
+Some friends and long-term followers hailed our approach as marking the beginning of a "decentralized super-app". What would you guess from which island's community these webxdc developments were inspired and co-driven?
 
 ### Movements in the woods and underground…
 
@@ -98,7 +92,18 @@ In 2023, in collaboration with [TeamUSEC](https://teamusec.de/) we want
 to perform systematic user and field-testing around security topics,
 in part following up on the often-quoted usable security study ["When Signal hits the fan"](https://dx.doi.org/10.14722/eurousec.2016.23012).
 
-### Easing onboarding with "Automatic Accounts"
+### Never underestimate the importance of testing
+
+Luckily, we have a wonderful testing community with key contributors
+sorting out issues with users and discussing with developers.
+One from Austria kept reminding us about specific connectivity problems
+even if they rarely occur and are hard to re-produce:
+the issues were fixed the last week, which increased resiliency for everyone.
+Did you know that most Delta Chat features are first tested on a Caribbean island?
+Some were originally developed in the DeltaLab app:
+a friendly fork of Delta Chat Android only available in the Cuban app store.
+
+### Ways out and around the dreaded onboarding problem
 
 Using a pre-existing email account is one of Delta Chat's core features, but also
 happens to be an impediment for many when getting started with Delta Chat.
@@ -120,9 +125,13 @@ freedom only arises if exit without sanctions is possible (and there is somewher
 When our prospective Automatic Account offering reaches its limits,
 you will need to migrate, and Automatic Accounts have the design goal of making this easy.
 
+### The coming migrations
+
+<img src="../assets/blog/blaine-fediverse.png" width="270" style="float:right; margin-left:1em;" />
 Speaking of migrations, we have more followers on the Fediverse than on Twitter
-and interesting conversations are now evolving.
+and interesting conversations are evolving on the Fediverse.
 Aren't e-mail addresses and fediverse addresses strangely similar?
+Aren't e-mail servers and ActivityPub servers both federated?
 Don't ActivityPub and E-Mail protocols share a culture
 of a diverse variety of players and different real-use implementations?
 Wouldn't federated social media with proper end-to-end encrypted chatting be a nice twist?
@@ -131,7 +140,7 @@ and then have an integrated Web/Messaging experience?
 Ecological and social contexts are changing and migrations out of need or choice need support,
 not new barriers and walled gardens.
 
-### Our "Rust-core" architecture and its UI bindings…
+### Our Rust-core architecture (tm) and its UI bindings…
 
 <img src="../assets/blog/rust-delta.png" width="270" style="float:right; margin-left:1em;" />
 Delta Chat was the first fully Rust-based chat app available
@@ -156,12 +165,9 @@ directly talking to core without a C-layer.
 New asynchronous python bindings doing away with all CFFI were started this week
 with first bots being ported to it.
 
-<img src="../assets/blog/2020-03-26-bots-2.jpg" width="270" style="float:right; margin-left:1em;" />
-
 For mailing-lists, SuperGroups, Mastodon, screenshots, downloading, and other fun experiments,
-bots are being deployed for practical and entertaining contexts.
-But this post is getting long and twisted enough already…
-Let's get to the maybe most important point of this whole post…
+bots based on Rust-core are being deployed for practical and entertaining contexts.
+But this post is getting long and twisted enough already so more on released bots some other time …
 
 ### We are looking for experienced React/Web, Java/Android and Swift/iOS developers
 
@@ -181,6 +187,8 @@ among them Google Play and F-Droid.
 Our [iOS app](https://github.com/deltachat/deltachat-ios) is a self-development using Uikit and Swift bindings to core.
 It is the youngest sibling in our offerings and also needs more love.
 
+### What we offer and how we (not) work
+
 For both Desktop and mobile development we offer 80-120 hours-per-month contracts.
 Payment is not bad, but certainly not what some corporate entities pay.
 Read more about [our funding sources here](https://delta.chat/en/help#how-are-delta-chat-developments-funded).
@@ -192,7 +200,7 @@ and from time to time in more remote locations like Kyiv or Havanna.
 We typically invite and converse with folks from interesting or befriended projects,
 collocated in decentralization, internet freedom, and queer fusion spaces.
 
-![Beautiful Cat with Delta Chat sticker](../assets/blog/2021-11-13-delta-cat.jpg)
+![Picture of a dc related party](../assets/blog/xi-xenia.jpg)
 
 Several of us avoid flying, and some are involved in Friday-for-Futures or adjacent activities.
 If we gather somewhere remote then usually for weeks rather than days,
@@ -209,14 +217,18 @@ are involved in background discussions and hack sessions around "what's interest
 We work with people located on several continents, some of them exiled,
 some of them migrants of choice, some of them in more stable and resource-rich environments.
 
+### Please help us to further improve UX and UIs for everyone
+
 Please contact us via e-mail addressed to delta@merlinux.eu
 if you are interested in helping us and our users with beautiful front end developments.
-
-Please provide some background on your prior projects.
-A CV is not neccessary but welcome if you have one lying around.
+Please provide some background on your prior projects or apps.
+A CV is not neccessary but welcome if you have one around.
 If we determine a base fit, we typically arrange a one month paid test period for both sides.
 We'll organize an onboarding group for you and guide you through first issues and peoples involved.
 
 Can't consider a job yourself but know someone who might be interested?
 Please forward this post to whatever channels you find appropriate.
 Thanks for reading and helping!
+
+![Beautiful Cat with Delta Chat sticker](../assets/blog/2021-11-13-delta-cat.jpg)
+
