change date to today

--- a/_posts/2020-12-13-uidevs.md
+++ b/_posts/2020-12-13-uidevs.md
@@ -228,7 +228,7 @@ We'll organize an onboarding group for you and guide you through first issues an
 
 Can't consider a job yourself but know someone who might be interested?
 Please forward this post to whatever channels you find appropriate.
-Thanks for reading and helping!
+Thanks for reading and helping! Aren't cats all beautiful?
 
 ![Beautiful Cat with Delta Chat sticker](../assets/blog/2021-11-13-delta-cat.jpg)
 
