change date of post

--- a/_posts/2022-12-15-uidevjob.md
+++ b/_posts/2022-12-15-uidevjob.md
@@ -8,7 +8,7 @@ What do indigenous communities in the Amazon rainforest, friends in Cuba, famili
 
 ![Artwork Decentralization Unchained](../assets/blog/decentralization-unchained.jpg)
 
-You guessed it: they're using or following Delta Chat because it is:
+You guessed it: they're using or interested in Delta Chat because it is:
 
 - **adaptable**: Indigenous communities
   use [solar-powered routers deep in the rainforest](https://rhizomatica.org),
@@ -229,7 +229,7 @@ We'll organize an onboarding group for you and guide you through first issues an
 
 Can't consider a job yourself but know someone who might be interested?
 We'd appreciate if you would forward this post to whatever channels you find appropriate.
-Thanks for reading and helping! Oh, and aren't cats all beautiful?
+Thanks for reading and helping!
 
 ![Beautiful Cat with Delta Chat sticker](../assets/blog/2021-11-13-delta-cat.jpg)
 
