Add donate link to footer

--- a/_data/lang/en.yaml
+++ b/_data/lang/en.yaml
@@ -16,6 +16,7 @@ en:
   subscribe_to_feed: Subscribe to our feed
 
   references: References
+  donate: Donate
   imprint: Imprint
   privacy: Privacy Policy
   language: Language
