first try to add comments via Mastodon

--- a/_posts/2022-12-15-uidevjob.md
+++ b/_posts/2022-12-15-uidevjob.md
@@ -2,6 +2,9 @@
 title: Decentralization Unchained (Psst ... want a UI/UX dev job?)
 author: olga, xenia
 image: ../assets/blog/decentralization-unchained.jpg
+host: chaos.social
+username: delta
+com_id: 109517627964019902
 ---
 
 What do indigenous communities in the Amazon rainforest, friends in Cuba, families in Iran, activists from Russia, a monastery in Cambodia, and many folks in the Fediverse have in common?
@@ -233,3 +236,4 @@ Thanks for reading and helping!
 
 ![Beautiful Cat with Delta Chat sticker](../assets/blog/2021-11-13-delta-cat.jpg)
 
+{% include comments.html %}
