added comments to more blogposts

--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -2,6 +2,7 @@
 title: Delta-XI in Kyiv 2018… a lot of beginnings 
 author: holger, moo
 image: ../assets/blog/xi-graffity.jpg
+com_id: 101088159826807336
 ---
 
 <img src="../assets/blog/xi-graffity.jpg" width="200" style="float: left; margin: 10px" /> 
