--- a/_posts/2019-01-27-releases.md
+++ b/_posts/2019-01-27-releases.md
@@ -2,6 +2,7 @@
 title: DeltaChat multi-platform releases rolling ... 
 author: holger
 image: ../assets/blog/desktop-screenshot.png
+com_id: 101485778673094220
 ---
 
 A lot of efforts in the last half year are coming to fruition ... release time!
