--- a/_posts/2019-03-30-uxreport.md
+++ b/_posts/2019-03-30-uxreport.md
@@ -2,6 +2,7 @@
 title: Key findings of first Delta Chat UX testing in Kyiv
 author: xenia,holger
 image: ../assets/blog/dc-uxreport1-small.png
+com_id: 101878610837619933
 ---
 
 Our [first user-testing report](../assets/blog/Delta-Chat-UX-test-report1.pdf) is out.
