--- a/_posts/2019-07-19-uxreport.md
+++ b/_posts/2019-07-19-uxreport.md
@@ -2,6 +2,7 @@
 title: UX and needfinding report Delta Chat
 author: xenia,holger
 image: ../assets/blog/delta-finreport-small.png
+com_id: 102524929776976381
 ---
 
 Our [final user-testing report](../assets/blog/Delta-Chat-UX-final-report-july2019.pdf) is out.
