--- a/_posts/2020-03-06-delta-1.2.md
+++ b/_posts/2020-03-06-delta-1.2.md
@@ -2,6 +2,7 @@
 title: "Pin Chats, Provider Database, Offline Help and more"
 author: "bjørn, paula (drawing)"
 image: ../assets/blog/2020-03-06-drawing.png
+com_id: 103782695758214561
 ---
 
 <img src="../assets/blog/2020-03-06-drawing.png" width="270" style="float:left; margin-right:1em;" /> 
