--- a/_posts/2020-06-24-releases.md
+++ b/_posts/2020-06-24-releases.md
@@ -2,6 +2,7 @@
 title: Delta Chat 1.10 is rolling out
 author: bjoern
 image: ../assets/blog/2020-06-faster.jpg
+com_id: 104406076924042594
 ---
 
 New Delta chat releases are out now or coming soon -
