--- a/_posts/2021-08-24-updates.md
+++ b/_posts/2021-08-24-updates.md
@@ -2,6 +2,7 @@
 title: Chat Requests, Multi-Account, Connectivity
 author: bjoern
 image: ../assets/blog/2021-08-chat-request-small.png
+com_id: 106828426439580393
 ---
 
 **Delta Chat 1.22** is out!
