--- a/_posts/2021-11-10-blog-GDPR.md
+++ b/_posts/2021-11-10-blog-GDPR.md
@@ -2,6 +2,7 @@
 title: New data protection officer appointed and refined privacy policies
 author: jette, treefit, missytake and holga
 image: ../assets/blog/fabian-schmieder.jpeg
+com_id: 107257523426890852
 ---
 
 The Delta Chat privacy policy situation just got even better! We appointed Prof. Dr. Fabian Schmieder, professor for data protection and media law of the [University of Applied Sciences and Arts Hanover](https://im.f3.hs-hannover.de/en_us/studium/personen/prof-dr-fabian-schmieder/) and coauthor of the standard work [Betrieblicher Datenschutz (Operational data protection)](https://www.beck-shop.de/forgo-helfrich-schneider-betrieblicher-datenschutz/product/24093138), who is now our data protection officer. He has been helping us for a long time and is not only a great advisor but also a brilliant pianist!:)
