--- a/_posts/2021-11-17-releases.md
+++ b/_posts/2021-11-17-releases.md
@@ -2,6 +2,7 @@
 title: Updates on Accounts, Downloads, Group-Joins, Search and more
 author: björn, kasha (cat)
 image: ../assets/blog/2021-11-13-account-switcher.png
+com_id: 107292372248127460
 ---
 
 Yip, Delta Chat **1.24 is out for Android and iOS:**
