--- a/_posts/2022-09-14-aeap.md
+++ b/_posts/2022-09-14-aeap.md
@@ -2,6 +2,7 @@
 title: Introducing Automatic E-mail Address Porting (AEAP)
 author: hocuri, holga
 image: ../assets/blog/2022-07-aeap-0.png
+com_id: 109031822203876059
 ---
 
 The Delta Chat 1.32 releases introduced e-mail porting mechanisms (AEAP). They enable for e-mail what number porting does for mobile phone communications, i.e. to more easily change between communication providers.
