--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -2,6 +2,7 @@
 title: Location matters! UX testing, the Rustocalypse and other Delta Xyiv happenings ...
 author: olgax
 image: ../assets/blog/xyiv-to-kyiv2.png
+com_id: 108141297904083761
 ---
 
 <img src="../assets/blog/xyiv-to-kyiv2.png" width="200" style="float: left; margin-right: 10px" /> 
