--- a/_data/lang/pl.yml
+++ b/_data/lang/pl.yml
@@ -16,7 +16,7 @@ pl:
   subscribe_to_feed: Zapisz się do naszego kanału
 
   references: Referencje
-  donate: ""
+  donate: Dotacje
   imprint: Wydawca
   privacy: Polityka prywatności
   language: Język
