update translations, fix links: it, nl, pl

--- a/_data/lang/it.yml
+++ b/_data/lang/it.yml
@@ -42,4 +42,4 @@ it:
       after: (sperimentale)
 
   help:
-    offline_hint: ""
+    offline_hint: "Di fretta? Puoi leggere questo aiuto rilassato in qualsiasi momento all'interno dell'app, anche senza Internet."
