--- a/_data/lang/nl.yml
+++ b/_data/lang/nl.yml
@@ -42,4 +42,4 @@ nl:
       after: (experimenteel)
 
   help:
-    offline_hint: ""
+    offline_hint: "Heb je weinig tijd? Dan kun je deze hulppagina ook in de app openen, zelfs zónder internet."
