update translations: uk, pt, pt_BR

--- a/_data/lang/uk.yml
+++ b/_data/lang/uk.yml
@@ -42,4 +42,4 @@ uk:
       after: (експеримент)
 
   help:
-    offline_hint: ""
+    offline_hint: "Поспішаєте? Ви можете спокійно почитати цю довідку в будь-який час у додатку, навіть без Інтернету."
