update translations: fr

--- a/_data/lang/fr.yml
+++ b/_data/lang/fr.yml
@@ -42,4 +42,4 @@ fr:
       after: (expérimental)
 
   help:
-    offline_hint: ""
+    offline_hint: "Vous n'avez pas le temps ? Vous pouvez lire la rubrique d'aide dès que vous aurez un peu de tranquillité, puisqu'elle reste accessible sur votre application à tout moment et sans connexion internet."
