--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -15,7 +15,7 @@ or to edit your household's shopping list.
 
 <!-- toot: make fun of Musk's X-thing: while some billionaires are talking about everything-apps, we are delivering it: [xstore@testrun.org](mailto:xstore@testrun.org) -->
 
-Now there is also an easy place to get private apps.
+Now there is also an easy place to get Private Apps.
 We just launched [xstore@testrun.org](mailto:xstore@testrun.org),
 an appstore after the example
 of the popular Open Source [F-Droid store](https://f-droid.org/).
@@ -37,11 +37,11 @@ which manages the store:
 ![In the chat with xstore@testrun.org, you can press start to open the store.](../assets/blog/2023-08-xstore-start.png)
 
 The bot will send you the store.xdc,
-the private app for the store.
+the Private App for the store.
 **Just click on "Start..."**
-to see a list of private apps you can download:
+to see a list of Private Apps you can download:
 
-![In the store app, you can see a list of private apps.](../assets/blog/2023-08-xstore-applist.png)
+![In the store app, you can see a list of Private Apps.](../assets/blog/2023-08-xstore-applist.png)
 
 With one tap you can download them,
 and with another tap,
@@ -64,7 +64,7 @@ and start to play:
 ## How does xstore work?
 
 Usually,
-private apps can not access the Internet.
+Private Apps can not access the Internet.
 That's what makes them private.
 So if you share the store.xdc to another chat,
 it will not work there.
@@ -84,7 +84,7 @@ and it will re-send the store to the chat.
 **Note:**
 if your version of Delta Chat is older than 1.38,
 the store.xdc will not work properly;
-you can not share downloaded private apps to a chat then.
+you can not share downloaded Private Apps to a chat then.
 [Just upgrade your Delta Chat app](download)
 to make it work.
 
@@ -98,11 +98,11 @@ and download apps from there.
 ## Do I have to use the official xstore?
 
 Of course not.
-You can always share a private app from one chat to another;
+You can always share a Private App from one chat to another;
 without copyright protection,
 without DRM,
 without barriers.
-Any private app is just a .xdc file
+Any Private App is just a .xdc file
 saved as an e-mail attachment.
 
 Additionally to that,
@@ -112,27 +112,27 @@ You can find installation instructions
 [in the bot's codeberg repository](https://codeberg.org/webxdc/store/#setting-up-the-bot).
 It works best together with [xdcget](https://codeberg.org/webxdc/xdcget/),
 a command line tool
-which downloads private apps
+which downloads Private Apps
 from git repositories.
 
-## How can I submit my own private app to xstore?
+## How can I submit my own Private App to xstore?
 
 So far,
-we already have more than 20 private apps in xstore.
+we already have more than 20 Private Apps in xstore.
 The number is growing fast,
 because it's so easy to adjust any web app
-so it works as a private app in Delta Chat.
+so it works as a Private App in Delta Chat.
 
 To get started with development,
 you can learn more about webxdc apps on [webxdc.org](https://webxdc.org)
 (`webxdc` is the technical term for Private Apps).
-You can also take other private apps as an example;
+You can also take other Private Apps as an example;
 in xstore you can find links to any app's source code
 by clicking on "More":
 
 ![Details of the checklist app, it shows a description, date, file size, and link to source code.](../assets/blog/2023-08-xstore-more.png)
 
-If you want to make your own private app available,
+If you want to make your own Private App available,
 just go on [codeberg.org](https://codeberg.org/webxdc/xdcget)
 (a github alternative)
 And open a pull request to our xdcget config file,
@@ -141,5 +141,5 @@ It's works basically like in F-Droid,
 just with much less complexity.
 
 We are looking forward to your contributions,
-and hope you have fun with private apps in Delta Chat!
+and hope you have fun with Private Apps in Delta Chat!
 
