rewrite/refactor the beginning

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -1,69 +1,51 @@
 ---
-title: A place where you can get Private Apps - xstore is ready!
-author: missytake
+title: Evolving everything-apps without billionaires - xstore is ready!
+author: missytake,holga
 image: ../assets/blog/2023-08-xstore-applist.png
 ---
 
-<img src="../assets/blog/gordon_superapp.jpg" width="340" style="float:right; margin-left:1em;" />  
-As [Gordon Brander](https://mastodon.social/@gordon) already stated -
-with [Private Apps](help#webxdc),
-Delta Chat is more than a messenger.
-You can share Private Apps with any other Delta Chat user
-and use them collaboratively;
-for example to play chess
-or to edit your household's shopping list.
-
 <!-- toot: make fun of Musk's X-thing: while some billionaires are talking about everything-apps, we are delivering it: [xstore@testrun.org](mailto:xstore@testrun.org) -->
 
-Now there is also an easy place to get Private Apps.
-We just launched [xstore@testrun.org](mailto:xstore@testrun.org),
-an appstore after the example
-of the popular Open Source [F-Droid store](https://f-droid.org/).
 
-## How can I download apps from xstore?
+It doesn't need to be hard to write, distribute or find end-to-end encrypted apps anymore. 
+If you use Delta Chat it's dead simple: 
 
-You can **scan this QR code with Delta Chat**
-([*do you need a test account?*](#tryout))
-to message [xstore@testrun.org](mailto:xstore@testrun.org)
-and try out the store:
+![In the store app, you can see a list of apps.](../assets/blog/2023-08-xstore-applist.png)
 
-[![A QR code, opening a chat with xstore@testrun.org](../assets/blog/xstore-testrun.org-verification.jpg)](OPENPGP4FPR::loremipsum)
+1. Say ["hi" to our beta xstore@testrun.org bot](mailto:xstore@testrun.org?body=hi)
+   and hit "Start" on the returned "store app".
 
-After scanning the QR code,
-a chat with [xstore@testrun.org](mailto:xstore@testrun.org) will open.
-It's the chat bot
-which manages the store:
+2. Select a game or collaborative tool for download.
 
-![In the chat with xstore@testrun.org, you can press start to open the store.](../assets/blog/2023-08-xstore-start.png)
+3. Share the downloaded app to any chat so everyone there 
+   can **Start** it without any logins, cookie or GDPR screens!
 
-The bot will send you the store.xdc,
-the Private App for the store.
-**Just click on "Start..."**
-to see a list of Private Apps you can download:
+[Rest-assured](https://delta.chat/en/2023-05-22-webxdc-security), 
+nobody else than your chat partners will know 
+that you are running an app together;
+there is no server or app-specific hosting, 
+no developer or store can track app usage,
+and all app interactions are end-to-encrypted. 
 
-![In the store app, you can see a list of Private Apps.](../assets/blog/2023-08-xstore-applist.png)
-
-With one tap you can download them,
-and with another tap,
-share them to any chat.
-If you want to use it on your own,
-just share it to your "Saved Messages" chat.
+Others are hand-wavingly talking about so called "super-app" or "everything app" architectures, 
+but we are delivering it today, 
+decentralized and end-to-end encrypted
+and open to collaborators from other messaging efforts. 
 
 ### I don't have a Delta Chat account yet, how can I play with this?  {#tryout}
 
-To try out xstore,
-you need a configured Delta Chat app.
-After installing Delta Chat,
+[Install Delta Chat](https://get.delta.chat) and in the setup-screen 
 just scan this invitation code
-during setup
-to obtain a limited test e-mail account
-and start to play:
+to obtain a limited test e-mail account: 
 
 [![A QR invite code to get a limited e-mail account at try.webxdc.org.](../assets/blog/try-webxdc-token.png)](DCACCOUNT:https://mailadm.try.webxdc.org/?t=90d_f7v5c5xrtntpkqe&n=try90d)
 
-## How does xstore work?
 
-Usually,
+## How does xstore work? Where does it get its apps from? 
+
+XXX describe and link xdcget and xdcstore and that xstore is a deployment of these tools
+XXX turn the below into 3-4 bullet notes 
+
 Private Apps can not access the Internet.
 That's what makes them private.
 So if you share the store.xdc to another chat,
@@ -99,9 +81,9 @@ and download apps from there.
 
 Of course not.
 You can always share a Private App from one chat to another;
-without copyright protection,
 without DRM,
-without barriers.
+without tracking,
+without login/consent barriers.
 Any Private App is just a .xdc file
 saved as an e-mail attachment.
 
