--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -27,8 +27,9 @@ there is no server or app-specific hosting,
 no developer or store can track app usage,
 and all app interactions are end-to-encrypted. 
 
+<img src="../assets/blog/gordon_superapp.jpg" width="340" style="float:right; margin-left:1em;" />  
 Others are hand-wavingly talking about so called "super-app" or "everything app" architectures, 
-but we are delivering it today, 
+but we are delivering it,
 decentralized and end-to-end encrypted
 and open to collaborators from other messaging efforts. 
 
