--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -1,45 +1,66 @@
 ---
-title: Evolving everything-apps without billionaires - xstore is ready!
+title: Everything-apps without platforms - say "hi" to xstore :)
 author: missytake,holga
 image: ../assets/blog/2023-08-xstore-applist.png
 ---
 
-<!-- toot: make fun of Musk's X-thing: while some billionaires are talking about everything-apps, we are delivering it: [xstore@testrun.org](mailto:xstore@testrun.org) -->
 
+<img src="../assets/blog/reclaim-the-streets.jpg" width="340" style="float:right; margin-left:1em;" />  
+Others are hand-wavingly chattering about so called "super-app" or "everything app" architectures, 
+but we prefer to just [deliver](https://delta.chat/en/2022-06-14-webxdcintro)
+and [improve](http://delta.chat/en/2023-06-28-webxdc-import-export) them.
+Today, we are happy to announce a new way to **find and start** 
+[webxdc "everything" apps](https://webxdc.org), among them: 
 
-It doesn't need to be hard to write, distribute or find end-to-end encrypted apps anymore. 
-If you use Delta Chat it's dead simple: 
+- A Wordle/Reactle clone, 2048, and many other little fun games,
 
-![In the store app, you can see a list of apps.](../assets/blog/2023-08-xstore-applist.png)
+- calendar, poll and checklist tools,
 
-1. Say ["hi" to our beta xstore@testrun.org bot](mailto:xstore@testrun.org?body=hi)
-   and hit "Start" on the returned "store app".
-
-2. Select a game or collaborative tool for download.
-
-3. Share the downloaded app to any chat so everyone there 
-   can **Start** it without any logins, cookie or GDPR screens!
+- a first editor app – think Cryptpad but without servers. 
 
 [Rest-assured](https://delta.chat/en/2023-05-22-webxdc-security), 
 nobody else than your chat partners will know 
-that you are running an app together;
-there is no server or app-specific hosting, 
-no developer or store can track app usage,
-and all app interactions are end-to-encrypted. 
+that you are running an app together.
+There is no server or app-specific hosting and
+not even the app developer or the xstore bot can track what you do. 
+All app interactions are automatically **end-to-encrypted
+and offline-first**: they all safely work in bad or no-network situations. 
+Let's take the streets backs from the online-platform billionaires :) 
 
-<img src="../assets/blog/gordon_superapp.jpg" width="340" style="float:right; margin-left:1em;" />  
-Others are hand-wavingly talking about so called "super-app" or "everything app" architectures, 
-but we are delivering it,
-decentralized and end-to-end encrypted
-and open to collaborators from other messaging efforts. 
+### How to start
 
-### I don't have a Delta Chat account yet, how can I play with this?  {#tryout}
+<img src="../assets/logos/store.png" width="140" style="float:right; margin-left:1em;" />  
+With Delta Chat already working it's dead simple to **start**:
+
+1. Say "hi" to [xstore@testrun.org](mailto:xstore@testrun.org?body=hi)
+   and hit **Start** on the returned webxdc store app. 
+
+2. Select a game or collaborative app for download.
+
+3. Share the downloaded app to a chat so that all members 
+   can **Start** the app without any logins, cookie or GDPR screens.
+
+Note that only one chat member needs to use xstore@testrun.org while
+all others can just start the app they receive in the chat, 
+and everyone can forward apps to other chats without restrictions,
+and without any kind of central tracking. 
+
+### I don't have Delta Chat yet, how can I play with this?  {#tryout}
 
 [Install Delta Chat](https://get.delta.chat) and in the setup-screen 
-just scan this invitation code
-to obtain a limited test e-mail account: 
+scan this invitation code to get an instant e-mail test account: 
 
 [![A QR invite code to get a limited e-mail account at try.webxdc.org.](../assets/blog/try-webxdc-token.png)](DCACCOUNT:https://mailadm.try.webxdc.org/?t=90d_f7v5c5xrtntpkqe&n=try90d)
+
+The test e-mail account will only exist 90 days
+and it does not allow to send chat mails to most "outside" e-mail addresses. 
+But if you want to test things for yourself,
+just share apps with your "Saved Messages" chat to play
+the occassional game without any ads or tracking. 
+Or maybe also use the "add second device" feature 
+to try out a cheap method of safely syncing notes, 
+checklists or calendars between your devices
+without any servers or additional accounts. 
 
 
 ## How does xstore work? Where does it get its apps from? 
