--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -25,7 +25,7 @@ There is no server or app-specific hosting and
 not even the app developer or the xstore bot can track what you do. 
 All app interactions are automatically **end-to-encrypted
 and offline-first**: they all safely work in bad or no-network situations. 
-Let's take the streets backs from the online-platform billionaires :) 
+Let's take the open web of streets back from the online-platform billionaires :) 
 
 ### How to start
 
@@ -146,4 +146,5 @@ just with much less complexity.
 
 We are looking forward to your contributions,
 and hope you have fun with Private Apps in Delta Chat!
+
 
