--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -12,7 +12,7 @@ and [improve](http://delta.chat/en/2023-06-28-webxdc-import-export) them.
 Today, we are happy to announce a new way to **find and start** 
 [webxdc "everything" apps](https://webxdc.org), among them: 
 
-- A Wordle/Reactle clone, 2048, and many other little fun games,
+- A Wordle/Reactle clone, 2048, and other fun games,
 
 - calendar, poll and checklist tools,
 
