--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -27,7 +27,7 @@ All app interactions are automatically **end-to-encrypted
 and offline-first**: they all safely work in bad or no-network situations. 
 Let's take the open web of streets back from the online-platform billionaires :) 
 
-### How to start
+## How to start
 
 <img src="../assets/logos/store.png" width="140" style="float:right; margin-left:1em;" />  
 With Delta Chat already working it's dead simple to **start**:
