store.xdc -> store app

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -70,11 +70,11 @@ XXX turn the below into 3-4 bullet notes
 
 Private Apps can not access the Internet.
 That's what makes them private.
-So if you share the store.xdc to another chat,
+So if you share the store app to another chat,
 it will not work there.
 Only because
 [xstore@testrun.org](mailto:xstore@testrun.org)
-is a chat bot which gets told by the store.xdc
+is a chat bot which gets told by the store app
 which app you want to download,
 it can download the app from the Internet
 and send it to you in the chat.
@@ -87,7 +87,7 @@ and it will re-send the store to the chat.
 
 **Note:**
 if your version of Delta Chat is older than 1.38,
-the store.xdc will not work properly;
+the store app will not work properly;
 you can not share downloaded Private Apps to a chat then.
 [Just upgrade your Delta Chat app](download)
 to make it work.
