private apps -> webxdc apps

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -1,6 +1,6 @@
 ---
 title: Everything-apps without platforms - say "hi" to xstore :)
-author: missytake,holga
+author: missytake, holga
 image: ../assets/blog/2023-08-xstore-appicons.png
 ---
 
@@ -68,7 +68,7 @@ without any servers or additional accounts.
 XXX describe and link xdcget and xdcstore and that xstore is a deployment of these tools
 XXX turn the below into 3-4 bullet notes 
 
-Private Apps can not access the Internet.
+webxdc apps can not access the Internet.
 That's what makes them private.
 So if you share the store app to another chat,
 it will not work there.
@@ -88,7 +88,7 @@ and it will re-send the store to the chat.
 **Note:**
 if your version of Delta Chat is older than 1.38,
 the store app will not work properly;
-you can not share downloaded Private Apps to a chat then.
+you can not share downloaded webxdc apps to a chat then.
 [Just upgrade your Delta Chat app](download)
 to make it work.
 
@@ -102,11 +102,11 @@ and download apps from there.
 ## Do I have to use the official xstore?
 
 Of course not.
-You can always share a Private App from one chat to another;
+You can always share a webxdc app from one chat to another;
 without DRM,
 without tracking,
 without login/consent barriers.
-Any Private App is just a .xdc file
+Any webxdc app is just a .xdc file
 saved as an e-mail attachment.
 
 Additionally to that,
@@ -116,27 +116,27 @@ You can find installation instructions
 [in the bot's codeberg repository](https://codeberg.org/webxdc/store/#setting-up-the-bot).
 It works best together with [xdcget](https://codeberg.org/webxdc/xdcget/),
 a command line tool
-which downloads Private Apps
+which downloads webxdc apps
 from git repositories.
 
-## How can I submit my own Private App to xstore?
+## How can I submit my own webxdc app to xstore?
 
 So far,
-we already have more than 20 Private Apps in xstore.
+we already have more than 20 webxdc apps in xstore.
 The number is growing fast,
 because it's so easy to adjust any web app
-so it works as a Private App in Delta Chat.
+so it works as a webxdc app in Delta Chat.
 
 To get started with development,
 you can learn more about webxdc apps on [webxdc.org](https://webxdc.org)
-(`webxdc` is the technical term for Private Apps).
-You can also take other Private Apps as an example;
+(`webxdc` is the technical term for webxdc apps).
+You can also take other webxdc apps as an example;
 in xstore you can find links to any app's source code
 by clicking on "More":
 
 ![Details of the checklist app, it shows a description, date, file size, and link to source code.](../assets/blog/2023-08-xstore-more.png)
 
-If you want to make your own Private App available,
+If you want to make your own webxdc app available,
 just go on [codeberg.org](https://codeberg.org/webxdc/xdcget)
 (a github alternative)
 And open a pull request to our xdcget config file,
@@ -145,6 +145,6 @@ It's works basically like in F-Droid,
 just with much less complexity.
 
 We are looking forward to your contributions,
-and hope you have fun with Private Apps in Delta Chat!
+and hope you have fun with webxdc apps in Delta Chat!
 
 
